# ece569

./: CMakeLists.txt  readme.txt
include/: canny.h  ed_pixel.h  hellocuda.h
src/: gpu_canny.cu  hellocuda.cu
